--- a/index.html
+++ b/index.html
@@ -56,14 +56,13 @@
               <a class="nav-link" href="">Download</a>
             </li>
           </ul>
-
         </div>
-      </nav>
 
+      </nav>
 
       <!-- Title -->
 
-      <div class="row">
+      <div id="title" class="row">
 
         <div class="col-lg-6">
           <h1>Meet new and interesting dogs nearby.</h1>
@@ -78,6 +77,7 @@
 
       </div>
     </div>
+    
   </section>
 
 
@@ -157,46 +157,53 @@
 
     <div class="row">
 
-      <div class="card col-md-6 col-lg-4">
-        <div class="card-header">
-          <h3>Chihuahua</h3>
+      <div class="pricing-column col-md-6 col-lg-4">
+        <div class="card">
+          <div class="card-header">
+            <h3>Chihuahua</h3>
+          </div>
+          <div class="card-body">
+            <h2>Free</h2>
+            <p>5 Matches Per Day</p>
+            <p>10 Messages Per Day</p>
+            <p>Unlimited App Usage</p>
+            <button type="button" class="btn btn-lg btn-block btn-outline-dark">Sign Up</button>
+          </div>
         </div>
-        <div class="card-body">
-          <h2>Free</h2>
-          <p>5 Matches Per Day</p>
-          <p>10 Messages Per Day</p>
-          <p>Unlimited App Usage</p>
-          <button type="button" class="btn btn-lg btn-block btn-outline-dark">Sign Up</button>
+
+      </div>
+
+      <div class="pricing-column col-md-6 col-lg-4">
+        <div class="card">
+          <div class="card-header">
+            <h3>Labrador</h3>
+          </div>
+          <div class="card-body">
+            <h2>$49 / mo</h2>
+            <p>Unlimited Matches</p>
+            <p>Unlimited Messages</p>
+            <p>Unlimited App Usage</p>
+            <button type="button" class="btn btn-lg btn-block btn-dark">Sign Up</button>
+          </div>
         </div>
       </div>
 
-      <div class="card col-md-6 col-lg-4">
-        <div class="card-header">
-          <h3>Labrador</h3>
-        </div>
-        <div class="card-body">
-          <h2>$49 / mo</h2>
-          <p>Unlimited Matches</p>
-          <p>Unlimited Messages</p>
-          <p>Unlimited App Usage</p>
-          <button type="button" class="btn btn-lg btn-block btn-dark">Sign Up</button>
+      <div class="pricing-column col-lg-4">
+        <div class="card">
+          <div class="card-header">
+            <h3>Mastiff</h3>
+          </div>
+          <div class="card-body">
+            <h2>$99 / mo</h2>
+            <p>Priority Listing</p>
+            <p>Unlimited Matches</p>
+            <p>Unlimited Messages</p>
+            <p>Unlimited App Usage</p>
+            <button type="button" class="btn btn-lg btn-block btn-dark">Sign Up</button>
+          </div>
         </div>
       </div>
 
-      <div class="card col-md-12 col-lg-4">
-        <div class="card-header">
-          <h3>Mastiff</h3>
-        </div>
-        <div class="card-body">
-          <h2>$99 / mo</h2>
-          <p>Pirority Listing</p>
-          <p>Unlimited Matches</p>
-          <p>Unlimited Messages</p>
-          <p>Unlimited App Usage</p>
-          <button type="button" class="btn btn-lg btn-block btn-dark">Sign Up</button>
-        </div>
-      </div>
-      
     </div>
 
   </section>
