finish footer section

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
       </div>
     </div>
-    
+
   </section>
 
 
@@ -213,9 +213,11 @@
 
   <section id="cta">
 
-    <h3>Find the True Love of Your Dog's Life Today.</h3>
-    <button type="button">Download</button>
-    <button type="button">Download</button>
+    <h3 class="cta-text">Find the True Love of Your Dog's Life Today.</h3>
+    <button type="button" class="btn btn-dark btn-lg download-button"><i class="fab fa-apple"></i>
+      Download</button>
+    <button type="button" class="btn btn-outline-light btn-lg download-button"><i class="fab fa-google-play"></i>
+      Download</button>
 
   </section>
 
@@ -224,6 +226,12 @@
 
   <footer id="footer">
 
+    <div>
+      <i class="fab fa-twitter social-icon"></i>
+      <i class="fab fa-facebook-f social-icon"></i>
+      <i class="fab fa-instagram social-icon"></i>
+      <i class="fas fa-envelope social-icon"></i>
+    </div>
     <p>© Copyright 2018 TinDog</p>
 
   </footer>
