--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <body>
 
-  <section id="title">
+  <section class="colored-section" id="title">
 
     <div class="container-fluid">
       <!-- Nav Bar -->
@@ -83,7 +83,7 @@
 
   <!-- Features -->
 
-  <section id="features">
+  <section class="white-section" id="features">
 
     <div class="container-fluid">
       <div class="row">
@@ -112,7 +112,7 @@
 
   <!-- Testimonials -->
 
-  <section id="testimonials">
+  <section class="colored-section" id="testimonials">
 
     <div id="carouselExampleControls" class="carousel slide" data-ride="false">
       <div class="carousel-inner">
@@ -142,7 +142,7 @@
 
   <!-- Press -->
 
-  <section id="press">
+  <section class="colored-section" id="press">
     <img class="press-logo" src="images/techcrunch.png" alt="tc-logo">
     <img class="press-logo" src="images/tnw.png" alt="tnw-logo">
     <img class="press-logo" src="images/bizinsider.png" alt="biz-insider-logo">
@@ -152,7 +152,7 @@
 
   <!-- Pricing -->
 
-  <section id="pricing">
+  <section class="white-section" id="pricing">
     <h2 class="pricing-heading">A Plan for Every Dog's Needs</h2>
     <p>Simple and affordable price plans for you and your dog.</p>
 
@@ -212,7 +212,7 @@
 
   <!-- Call to Action -->
 
-  <section id="cta">
+  <section class="colored-section" id="cta">
 
     <div class="container-fluid">
       <h3 class="big-heading">Find the True Love of Your Dog's Life Today.</h3>
@@ -227,8 +227,8 @@
 
   <!-- Footer -->
 
-  <footer id="footer">
-    
+  <footer class="white-section" id="footer">
+
     <div class="container-fluid">
       <div>
         <i class="fab fa-twitter social-icon"></i>
